--- a/src/Vista/VistaInventario.form
+++ b/src/Vista/VistaInventario.form
@@ -188,15 +188,13 @@
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="comboIdLibro" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                          <Component id="txtNombre1" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnBuscar1" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="btnBuscar1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txtNombre1" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
